This seems to work. Image now points to the home directoy and we hide everything else.

--- a/CourseContent/uw-cloud/Docker/Dockerfile
+++ b/CourseContent/uw-cloud/Docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM lmoresi/uw_user_cloud:2019.09.12v_dev
+FROM lmoresi/uw_user_cloud:2019.09.13_dev
 
 ## =============================================================
 ## base - image ... whatever functionality you want to provide !
